# todoapp_python

./: .gitignore  pyproject.toml
backend/: config.py  crud.py  database.py  main.py  models.py  schemas.py
backend/routers/: todos.py
frontend/: package-lock.json  package.json
frontend/components/: layout.js  todo-list.js  todo.js
frontend/pages/: index.js
frontend/styles/: layout.module.css  todo-list.module.css  todo.module.css
